--- a/TPE/TPE3/animacion/style.css
+++ b/TPE/TPE3/animacion/style.css
@@ -54,17 +54,22 @@ body {
 }
 
 #personaje {
-    width: 221px;
-    height: 154px;
+    border: 1px solid blue;
+    border-bottom-left-radius: 30%;
+    border-bottom-right-radius: 30%;
+    width: 160px;
+    height: 220px;
+    margin:0;
+    padding: 0;
     z-index: 1;
     position: absolute;
     bottom: 17.5%;
     left: 100px;
-    background: url("images/cat.png") repeat-x;
+    background: url("images/plants-vs-zombie/spritesheet.png") repeat-x;
 }
 
 .correr {
-    animation: correr .6s steps(8) infinite;
+    animation: correr 3s steps(10) infinite;
 }
 
 .saltar {
@@ -105,19 +110,30 @@ body {
     }
 }
 
+.muere{
+    height: 190px;
+    width: 261px;
+    background: url("images/muere.png");
+    animation: muere 1.8s steps(10) infinite;
+    transform: translate(150px, 180px);
+}
 
-
-
+@keyframes muere{
+    from {background-position: 0 0;} to
+    {background-position: -2617px 0;}
+}
 
 
 
 .enemigo {
+    border: 1px solid blue;
     position: absolute;
+    border-top-left-radius: 30%;
     bottom: 20%;
-    width: 128px;
-    height: 92px;
-    background-color: black;
-    animation: enemigo 2.5s forwards linear;
+    height: 80px;
+    width: 60px;
+    background: url("images/plants-vs-zombie/cactus.png");
+    animation: enemigo 6s forwards linear;
 }
 
 
