--- a/TPE/TPE3/animacion/style.css
+++ b/TPE/TPE3/animacion/style.css
@@ -53,7 +53,7 @@ body {
     }
 }
 
-#personaje {
+.zombie{
     border: 1px solid blue;
     border-bottom-left-radius: 30%;
     border-bottom-right-radius: 30%;
