--- a/TPE/TPE3/animacion/style.css
+++ b/TPE/TPE3/animacion/style.css
@@ -155,6 +155,29 @@ body {
     }
 }
 
+@keyframes flip {
+   0% {
+      transform: perspective(400px) rotateY(0);
+      animation-timing-function: ease-out;
+   }
+   40% {
+      transform: perspective(400px) translateZ(150px) rotateY(170deg);
+      animation-timing-function: ease-out;
+   }
+   50% {
+      transform: perspective(400px) translateZ(150px) rotateY(190deg) scale(1);
+      animation-timing-function: ease-in;
+   }
+   80% {
+      transform: perspective(400px) rotateY(360deg) scale(.95);
+      animation-timing-function: ease-in;
+   }
+   100% {
+      transform: perspective(400px) scale(1);
+      animation-timing-function: ease-in;
+   }
+} 
+
 #gameOver{
     display: block;
     margin-left: auto;
