--- a/TPE/TPE3/animacion/style.css
+++ b/TPE/TPE3/animacion/style.css
@@ -1,4 +1,5 @@
 body {
+    overflow: hidden;
     margin: 0;
     max-height: 100%;
 }
@@ -54,7 +55,7 @@ body {
 }
 
 .zombie{
-    /* border: 1px solid blue; */
+     border: 1px solid blue; 
     border-bottom-left-radius: 30%;
     border-bottom-right-radius: 30%;
     width: 160px;
@@ -114,18 +115,20 @@ body {
     height: 190px;
     width: 261px;
     background: url("images/muere.png");
-    animation: muere steps(10) 1;
-    animation-duration: 1.8s;
+    animation: muere 1.8s steps(9) forwards; 
 }
 
 @keyframes muere{
-    
-    from {background-position: 0 0;} to
-    {background-position: -2617px 0;}
+    from { background-position: 0 0; } 
+    to  { 
+        background-position: -2414px 0;
+        width: 200px;
+        border-radius: 0px;
+    }
 }
 
 .enemigo {
-    /* border: 1px solid blue; */
+     border: 1px solid blue; 
     position: absolute;
     border-top-left-radius: 30%;
     bottom: 20%;
